<?xml version="1.0"?>
<package format="2">
  <name>darknet_ros_3d</name>
  <version>0.0.0</version>
  <description>
    The darknet_ros_3d package.
    This package is composed by only one node whose job is to sunscribe
    to Darknet ROS bounding boxes and to depth camera information.
    Then, it publicates in topic "/darknet_ros3d/bounding_boxes" 3d bounding boxes
    adding the distances are they
  </description>

  <maintainer email="fergonzaramos@yahoo.es">Fernando González</maintainer>
  <maintainer email="eranga.charith@gmail.com">Charith Munasinghe</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>darknet_ros_3d_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>roslint</depend>
  <depend>visualization_msgs</depend>
</package>
